k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: yaschat-backend
spec:
  type: NodePort
  selector:
    app: yaschat-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30001  # tu peux choisir une valeur entre 30000 et 32767
