k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: yaschat-frontend
spec:
  type: NodePort
  selector:
    app: yaschat-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30002
