k8s/service-users.yaml
apiVersion: v1
kind: Service
metadata:
  name: yaschat-users-service
spec:
  selector:
    app: yaschat-users-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
