k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yaschat-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: yaschat.local
    http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: yaschat-backend
            port:
              number: 8080
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: yaschat-frontend
            port:
              number: 3000

       - path: /users
         pathType: Prefix
         backend:
           service:
             name: yaschat-users-service
             port:
               number: 8081
