k8s/yaschat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yaschat-ingress
spec:
  rules:
    - host: yaschat.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yaschat-frontend
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: yaschat-backend
                port:
                  number: 8080
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: yaschat-users-service
                port:
                  number: 8081
